CSS adjustments: fixing detail page for better fit on mobile screen

--- a/src/components/Navbar/navbar.css
+++ b/src/components/Navbar/navbar.css
@@ -152,4 +152,9 @@ nav,
   .navbar-subtitle {
     visibility: collapse;
   }
+
+  .dropdown-content {
+    width: 50%;
+    right: 50%;
+  }
 }
