--- a/src/index.css
+++ b/src/index.css
@@ -78,5 +78,6 @@ page-content {
 @media screen and (max-width: 768px) {
   .landing-body-detail {
     max-height: 90%;
+    max-width: 95%;
   }
 }
